fixing menu overflow

--- a/style.css
+++ b/style.css
@@ -466,8 +466,7 @@ svg:hover{
     display: none;
 }
 .overlayChild.menuOverlay{
-    position: fixed;
-    top:0;
+    position:relative;
     background-color: white;
     width:70%;
     min-height:100%;
@@ -701,6 +700,12 @@ svg:hover{
     .inputs button,.inputs .amount{
         max-width: unset;
         width: 100%;
+    }
+    .overlayChild.lightBox{
+        position: fixed;
+    }
+    .overlay{
+        overflow-y: initial;
     }
 }
 @media only screen and (max-width:700px){
